apis: add chat to the message
