# api/http/openapi.yaml
@@ -52,6 +52,25 @@ components:
           type: boolean
         result:
           $ref: '#/components/schemas/TgMessage'
+    TgChat:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        type:
+          type: string
+        title:
+          type: string
+        first_name:
+          type: string
+        last_name:
+          type: string
+        is_forum:
+          type: boolean
+      required:
+        - id
+        - type
     TgMessage:
       type: object
       properties:
@@ -66,6 +85,8 @@ components:
           format: int64
         from:
           $ref: '#/components/schemas/TgUser'
+        chat:
+          $ref: '#/components/schemas/TgChat'
     TgUser:
       type: object
       properties:
